--- a/frontend/src/pages/login/styles.scss
+++ b/frontend/src/pages/login/styles.scss
@@ -10,7 +10,7 @@
   justify-content: space-between;
 
   // Size properties.
-  height: 100vh;
+  height: 96vh;
   margin: auto;
   max-width: 1280px;
   width: 100%;
